[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["Kirienko-Alyona <ladybird.miami@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
postgres = "^4.0"
sqlalchemy = "^2.0.7"
pydantic = "^1.10.7"
fastapi = "^0.95.0"
uvicorn = {extras = ["standart"], version = "^0.21.1"}
alembic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
