[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["Kirienko-Alyona <ladybird.miami@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
postgres = "^4.0"
sqlalchemy = "^2.0.7"
pydantic = {extras = ["email"], version = "^1.10.7"}
fastapi = "^0.95.0"
uvicorn = {extras = ["standart"], version = "^0.21.1"}
alembic = "^1.10.2"
psycopg2 = "^2.9.5"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
